Add header and product list

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  
+  <main>
+    <h1>Your Store</h1>
+    <div id="products">
+      <div class="product"></div>
+      <div class="product"></div>
+      <div class="product"></div>
+      <div class="product"></div>
+    </div>
+  </main>
 </body>
 </html>
