Add ordering by price

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <main>
     <h1>Your Store</h1>
+    <select name="price-order"></select>
     <div id="products">
       <div class="product"></div>
       <div class="product"></div>
