Revert "Add hot label"
This reverts commit 71af97022a33a7a69088c219a4bb2378216e67ca.

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <select name="price-order"></select>
     <div id="products">
       <div class="product"></div>
-      <div class="product hot"></div>
       <div class="product"></div>
-      <div class="product hot"></div>
+      <div class="product"></div>
+      <div class="product"></div>
     </div>
   </main>
 </body>
