Add color filter

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <aside>
     <div id="brand-filter"></div>
+    <div id="color-filter"></div>
   </aside>
   <main>
     <h1>Your Store</h1>
